--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <h1 class="title">Salve carai</h1>
-        <img class="image" src="/images/pfp.png" alt="profile_pic" width="220">
+        <img class="image" src="images/pfp.png" alt="profile_pic" width="220">
         <h2 class="subtitle"> Sobre minha pessoa</h2>
     </header>
 
