--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <h1 class="title">Salve carai</h1>
-        <img class="image" src="images/pfp.png" alt="profile_pic" width="220">
+        <img class="image" src="/images/pfp.png" alt="profile_pic" width="220">
         <h2 class="subtitle"> Sobre minha pessoa</h2>
     </header>
 
@@ -27,18 +27,18 @@
         <h1> • Resuminho da minha vida </h3>
     </div>
     <div class="resumo">
-        <h2> ➝ Olá! meu nome é Danilo de Oliveira Munhoz, teho 18 anos e sou residente de Praia Grande - SP</h1>
-            <h2> escuto muita música, tenho uma namorada maravilhosa e curto jogar uns jogos, recentemente
+        <p> ➝ Olá! meu nome é Danilo de Oliveira Munhoz, teho 18 anos e sou residente de Praia Grande - SP</p>
+            <p> escuto muita música, tenho uma namorada maravilhosa e curto jogar uns jogos, recentemente
                 comecei com a programação, estou aprendendo a fazer sites e esse aqui vai ser o meu primeiro.
-            </h2>
+            </p>
     </div>
     <div class="objetivos">
         <h1> • Objetivos com a programação</h1>
     </div>
     <div class="lista">
-        <h2> ➝ Aprender html; </h2>
-        <h2> ➝ Aprender css; </h2>
-        <h2> ➝ Após isso aprender mais sobre backend;</h2>
+        <p> ➝ Aprender html; </p>
+        <p> ➝ Aprender css; </p>
+        <p> ➝ Após isso aprender mais sobre backend;</p>
     </div>
 
     <footer>
